--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Business Name</title>
+    <title>Newminds</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; color: #333; }
         .header, .footer { background: #f8f8f8; padding: 10px 0; text-align: center; }
@@ -18,7 +18,7 @@
 <body>
 
     <div class="header">
-        <h1>Your Business Name</h1>
+        <h1>Newminds</h1>
         <nav>
             <a href="#about">About Us</a> |
             <a href="#services">Services</a> |
@@ -26,7 +26,7 @@
         </nav>
     </div>
 
-    <div class="hero">
+<!--     <div class="hero">
         <h2>Welcome to Our Business</h2>
         <p>Leading the way in Quality and Service</p>
     </div>
@@ -56,9 +56,9 @@
             <input type="submit" value="Send">
         </form>
     </div>
-
+ -->
     <div class="footer">
-        <p>&copy; 2023 Your Business Name. All rights reserved.</p>
+        <p>&copy; 2023 Newminds. All rights reserved.</p>
     </div>
 
 </body>
