--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
 
     <div class="header">
         <h1>Newminds</h1>
-        <nav>
+<!--         <nav>
             <a href="#about">About Us</a> |
             <a href="#services">Services</a> |
             <a href="#contact">Contact</a>
-        </nav>
+        </nav> -->
     </div>
 
-<!--     <div class="hero">
+    <div class="hero">
         <h2>Welcome to Our Business</h2>
         <p>Leading the way in Quality and Service</p>
     </div>
 
+<!-- 
     <div class="section" id="about">
         <h3>About Us</h3>
         <p>We are a leading business in our industry, committed to providing quality and value to our customers.</p>
